建立新图纸集可恢复发布事务
